--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+# URL aplikasi menggunakan port yang di-expose oleh Nginx container
+APP_URL=http://localhost:8080
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -43,7 +44,9 @@ CACHE_STORE=database
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+# Redis Configuration
+# Sama seperti database, Redis host menggunakan nama service
+REDIS_HOST=redis              # Nama service di docker-compose.yml
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -63,3 +66,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Logging
+LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
+# Broadcast & Queue (untuk development menggunakan sync)
+BROADCAST_CONNECTION=log
+QUEUE_CONNECTION=sync
