--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,7 +1,6 @@
 FROM php:8.3-fpm-alpine
 
 # Install system dependencies yang dibutuhkan Laravel
-# Setiap package di sini memiliki tujuan spesifik untuk mendukung extensions PHP
 RUN apk add --no-cache \
     git \
     curl \
@@ -34,36 +33,49 @@ RUN apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
     && docker-php-ext-enable redis \
     && apk del .build-deps
 
-
 # Copy Composer dari official image
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Set working directory
 WORKDIR /var/www/html
 
+# Copy composer files first untuk better layer caching
+COPY composer.json composer.lock ./
+
+# Install dependencies PHP menggunakan Composer
+RUN composer install --no-dev --optimize-autoloader --no-scripts
+
 # Copy seluruh aplikasi ke dalam container
 COPY . .
 
-# Install dependencies PHP menggunakan Composer
-RUN composer install --optimize-autoloader
-
-# Buat direktori yang dibutuhkan Laravel
+# Buat direktori yang dibutuhkan Laravel dengan permissions yang benar
 RUN mkdir -p /var/www/html/storage/logs \
     && mkdir -p /var/www/html/storage/framework/cache \
     && mkdir -p /var/www/html/storage/framework/sessions \
     && mkdir -p /var/www/html/storage/framework/views \
     && mkdir -p /var/www/html/bootstrap/cache
 
-# Set proper ownership dan permissions
+# Set proper ownership dan permissions - PERBAIKAN UTAMA
 RUN chown -R www-data:www-data /var/www/html \
-    && find /var/www/html/storage -type f -exec chmod 664 {} \; \
-    && find /var/www/html/storage -type d -exec chmod 775 {} \; \
-    && find /var/www/html/bootstrap/cache -type f -exec chmod 664 {} \; \
-    && find /var/www/html/bootstrap/cache -type d -exec chmod 775 {} \;
+    && chmod -R 755 /var/www/html \
+    && chmod -R 775 /var/www/html/storage \
+    && chmod -R 775 /var/www/html/bootstrap/cache
 
 # Copy PHP configuration
 COPY docker/php/php.ini /usr/local/etc/php/conf.d/99-custom.ini
 
+# Run composer scripts setelah copy
+RUN composer dump-autoload --optimize
+
 # Expose port 9000 dan start php-fpm server
 EXPOSE 9000
-CMD ["php-fpm"]
+
+# Switch to www-data user untuk security
+USER www-data
+
+# Tambahkan di akhir Dockerfile
+COPY docker/php/init.sh /usr/local/bin/init.sh
+RUN chmod +x /usr/local/bin/init.sh
+
+# Ganti CMD
+CMD ["/usr/local/bin/init.sh"]
