--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,7 @@
 FROM php:8.3-fpm-alpine
 
 # Install system dependencies yang dibutuhkan Laravel
+# Setiap package di sini memiliki tujuan spesifik untuk mendukung extensions PHP
 RUN apk add --no-cache \
     git \
     curl \
@@ -15,6 +16,20 @@ RUN apk add --no-cache \
     libwebp-dev \
     icu-dev
 
+# Penjelasan detail setiap package:
+# git - Untuk composer dan version control
+# curl - Untuk HTTP requests
+# libpng-dev - Untuk image processing (GD extension)
+# libxml2-dev - Untuk XML processing
+# zip/unzip - Untuk compression utilities
+# oniguruma-dev - Untuk mbstring extension
+# libzip-dev - Untuk zip extension
+# freetype-dev - Untuk advanced image processing
+# libjpeg-turbo-dev - Untuk JPEG image support
+# libwebp-dev - Untuk WebP image support
+# icu-dev - Untuk internationalization
+
+# Compile dan install PHP extensions yang dibutuhkan Laravel
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
     && docker-php-ext-install -j$(nproc) \
         pdo_mysql \
@@ -39,39 +54,29 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Set working directory
 WORKDIR /var/www/html
 
-# Copy composer files first untuk better layer caching
-COPY composer.json composer.lock ./
-
-# Install dependencies PHP menggunakan Composer
-RUN composer install --no-dev --optimize-autoloader --no-scripts
-
 # Copy seluruh aplikasi ke dalam container
 COPY . .
 
-# Buat direktori yang dibutuhkan Laravel dengan permissions yang benar
+# Install dependencies PHP menggunakan Composer
+RUN composer install --optimize-autoloader
+
+# Buat direktori yang dibutuhkan Laravel
 RUN mkdir -p /var/www/html/storage/logs \
     && mkdir -p /var/www/html/storage/framework/cache \
     && mkdir -p /var/www/html/storage/framework/sessions \
     && mkdir -p /var/www/html/storage/framework/views \
     && mkdir -p /var/www/html/bootstrap/cache
 
-# Set proper ownership dan permissions - PERBAIKAN UTAMA
+# Set proper ownership dan permissions
 RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 755 /var/www/html \
-    && chmod -R 775 /var/www/html/storage \
-    && chmod -R 775 /var/www/html/bootstrap/cache
+    && find /var/www/html/storage -type f -exec chmod 664 {} \; \
+    && find /var/www/html/storage -type d -exec chmod 775 {} \; \
+    && find /var/www/html/bootstrap/cache -type f -exec chmod 664 {} \; \
+    && find /var/www/html/bootstrap/cache -type d -exec chmod 775 {} \;
 
 # Copy PHP configuration
 COPY docker/php/php.ini /usr/local/etc/php/conf.d/99-custom.ini
 
-# Run composer scripts setelah copy
-RUN composer dump-autoload --optimize
-
 # Expose port 9000 dan start php-fpm server
 EXPOSE 9000
-
-# Switch to www-data user untuk security
-USER www-data
-
-# Ganti CMD
-CMD ["phpfpm"]
+CMD ["php-fpm"]
